[gd_scene load_steps=4 format=3 uid="uid://c6sx28dkpeclq"]

[ext_resource type="Script" uid="uid://d1sg2fmoct87x" path="res://ui/combat_panel/combat_panel.gd" id="1_1wwld"]
[ext_resource type="PackedScene" uid="uid://bojpgvlm623qa" path="res://ui/combat_panel/name_panel/name_panel.tscn" id="2_yi715"]
[ext_resource type="PackedScene" uid="uid://dl5b1nrmjmryn" path="res://ui/combat_panel/stats_panel/stats_panel.tscn" id="3_vq7xu"]

[node name="CombatInfoDisplay" type="GridContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -115.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 0
columns = 3
script = ExtResource("1_1wwld")

[node name="LeftNamePanel" parent="." instance=ExtResource("2_yi715")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="RightNamePanel" parent="." instance=ExtResource("2_yi715")]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftStatsPanel" parent="." instance=ExtResource("3_vq7xu")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Damage" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(178, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="RightStatsPanel" parent="." instance=ExtResource("3_vq7xu")]
layout_mode = 2
size_flags_horizontal = 3
